add add paragraph block elements to the page

--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -6,6 +6,6 @@
     <title>my favorite things-- not entirely!</title>
 </head>
 <body>
-    just some here and there stuff.
+    <p>just some here and there stuff.</p>
 </body>
 </html>
