--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>My First Webpage---shushh!! liar!!</h1>
-    <h2>Written with a little guidance from Moringa School</h2>
+    <h2>Written with a little guidance from <em>Moringa School</em></h2>
 
     <p>Hello, world!</p>
-    <p>Welcome to my first webpage!</p>
+    <p>Welcome to my <strong>first web page</strong>!</p>
     <p>Again.. Not really!</p>
 
     <p>Here are some things I'm going to learn about coding:</p>
@@ -20,5 +20,11 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+
+    <p>Check out <a href="http://moringaschool.com/">Moringa School</a>. It's a great place to learn web development skills!</p>
+    <p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
+
+    <img src="elephant.jpg" alt="A photo of an elephant">
+
 </body>
 </html>
